# smart-shell

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  models.rs  ssh.rs
src-tauri/src/commands/: ai.rs  mod.rs  pty.rs  security.rs  sftp.rs  ssh.rs
src/composables/: useBackend.ts
