[package]
name = "cathup-ssh"
version = "1.0.0"
description = "Remote shell + file explorer + AI assistant"
authors = ["yukun"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = [] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
ssh2 = "0.9"
base64 = "0.22"
once_cell = "1.20"
uuid = { version = "1.10", features = ["v4"] }
keyring = "2.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
